--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
-    "prepare": "yarn build",
+    "prepare": "npm install build",
     "watch": "tsc --watch"
   },
   "keywords": [],
