--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
     "parcel": "^1.12.3",
+    "parcel-plugin-static-files-copy": "^2.2.1",
     "typescript": "^3.4.5"
   },
   "peerDependencies": {
