--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/jszip": "^3.1.7",
     "build": "^0.1.4",
     "jszip": "^3.2.2",
-    "jszip-utils": "^0.1.0"
+    "jszip-utils": "^0.1.0",
+    "react-webworker": "^2.1.0"
   }
 }
