Write first tests

--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "react-app-polyfill": "^1.0.1",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
+    "cypress": "^3.8.3",
     "parcel": "^1.12.3",
     "parcel-plugin-static-files-copy": "^2.2.2",
     "typescript": "^3.4.5"
