--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "moocfi-editor",
   "version": "0.5.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/index.html",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
+    "now-build": "rm -rf ./dist && parcel build example/index.html --out-dir public",
     "prepare": "npm install build",
     "watch": "tsc --watch"
   },
@@ -84,6 +85,7 @@
     "build": "^0.1.4",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
-    "react-webworker": "^2.1.0"
+    "react-webworker": "^2.1.0",
+    "zeit": "^1.3.0"
   }
 }
