--- a/now.json
+++ b/now.json
@@ -1,7 +1,11 @@
 {
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build",
+      "config": { "distDir": "public" }
     }
-  }
+  ],
+  "alias": "python-editor.now.sh"
 }
