--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
-    "now-build": "parcel build example/index.html --out-dir public",
+    "now-build": "NODE_ENV=production parcel build example/index.html --out-dir public",
     "prepare": "npm install build",
     "watch": "tsc --watch"
   },
