--- a/now.json
+++ b/now.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    }
+  },
   "builds": [
     {
       "src": "package.json",
