--- a/package.json
+++ b/package.json
@@ -82,10 +82,12 @@
   "dependencies": {
     "@monaco-editor/react": "^3.0.1",
     "@types/jszip": "^3.1.7",
+    "@types/uuid": "^3.4.7",
     "build": "^0.1.4",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
     "react-webworker": "^2.1.0",
-    "zeit": "^1.3.0"
+    "zeit": "^1.3.0",
+    "uuid": "^3.4.0"
   }
 }
