--- a/package.json
+++ b/package.json
@@ -86,8 +86,9 @@
     "build": "^0.1.4",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
+    "react-app-polyfill": "^1.0.6",
     "react-webworker": "^2.1.0",
-    "zeit": "^1.3.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "zeit": "^1.3.0"
   }
 }
