--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,19 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "outDir": "./dist",
+    "allowSyntheticDefaultImports": false,
     "target": "es5",
-    "lib": ["dom", "esnext"],
-    "module": "esnext",
-    "moduleResolution": "node",
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strict": true,
-    "removeComments": true,
-    "declaration": false,
-    "sourceMap": true,
+    "module": "commonjs",
     "jsx": "react",
-    "typeRoots": [
-      "index.d.ts",
-      "node_modules/@types"
-    ],
+    "moduleResolution": "node",
+    "noImplicitAny": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "removeComments": true,
+    "strictNullChecks": false,
+    "preserveConstEnums": true,
+    "sourceMap": true,
+    "lib": ["es2015", "es2016", "dom"],
+    "baseUrl": ".",
     "types": ["node"]
-  },
-  "include": [
-    "./src/**/*.tsx",
-    "./src/**/*.ts", "src/utils/string_tools.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  }
 }
