--- a/package.json
+++ b/package.json
@@ -20,32 +20,24 @@
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^4.0.0",
-    "@material-ui/styles": "^4.2.1",
     "@types/commonmark": "^0.27.4",
     "@types/node": "^12.0.12",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.1.0",
     "@types/styled-components": "^4.4.2",
-    "axios": "^0.18.0",
     "commonmark": "^0.29.0",
     "cypress": "^4.1.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
-    "monaco-editor": "^0.19.2",
     "prettier": "^1.19.1",
-    "react": "16.x",
     "react-content-loader": "^4.2.2",
-    "react-dom": ">= 16.3.0",
     "react-redux": "^7.1.0",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.1",
-    "typesafe-actions": "^4.4.2",
-    "typescript": "^3.5.2"
+    "typesafe-actions": "^4.4.2"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
@@ -81,16 +73,24 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/styles": "^4.9.0",
     "@monaco-editor/react": "^3.0.1",
     "@types/jszip": "^3.1.7",
     "@types/uuid": "^3.4.7",
+    "axios": "^0.18.1",
     "build": "^0.1.4",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
+    "monaco-editor": "^0.19.3",
     "parcel": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.3.1",
+    "react": "^16.13.0",
     "react-app-polyfill": "^1.0.6",
+    "react-dom": "^16.13.0",
     "react-webworker": "^2.1.0",
+    "styled-components": "^4.4.1",
+    "typescript": "^3.8.3",
     "uuid": "^3.4.0",
     "zeit": "^1.3.0"
   }
