--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
   "license": "Apache-2.0 OR MIT",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-7",
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.0.0",
     "@material-ui/styles": "^4.2.1",
     "@types/commonmark": "^0.27.4",
@@ -80,6 +77,9 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@monaco-editor/react": "^3.0.1",
     "@types/jszip": "^3.1.7",
     "@types/uuid": "^3.4.7",
@@ -87,7 +87,7 @@
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
     "react-webworker": "^2.1.0",
-    "zeit": "^1.3.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "zeit": "^1.3.0"
   }
 }
