--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "parcel": "^1.12.4",
+    "react": "^16.13.0",
     "react-app-polyfill": "^1.0.6",
     "react-webworker": "^2.1.0"
   },
@@ -26,10 +27,6 @@
     "commonmark": ">= 0.29.0",
     "react": ">= 16.8.0",
     "react-dom": ">= 16.8.0",
-    "react-redux": ">= 7.1.0",
-    "redux": ">= 4.0.4",
-    "redux-thunk": ">= 2.3.0",
-    "reduce-reducers": "^1.0.4",
     "styled-components": ">= 4.0.0",
     "typesafe-actions": ">= 4.4.2"
   }
