--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-dom": "^16.13.0",
     "react-webworker": "^2.1.0",
     "styled-components": "^4.4.1",
+    "ts-results": "^2.0.1",
     "typescript": "^3.8.3",
     "uuid": "^3.4.0",
     "zeit": "^1.3.0"
