--- a/package.json
+++ b/package.json
@@ -8,24 +8,47 @@
     "cypress:open": "cypress open",
     "now-build": "cd example && parcel build index.html --out-dir ../public && cp ../static/* ../public/",
     "prepare": "npm install build",
-    "serve": "rm -rf ./public && parcel index.html --out-dir public",
     "watch": "tsc --watch"
   },
   "keywords": [],
   "author": "",
   "license": "Apache-2.0 OR MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-regular-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/styles": "^4.9.0",
+    "@monaco-editor/react": "^3.0.1",
     "@types/commonmark": "^0.27.4",
+    "@types/jszip": "^3.1.7",
     "@types/node": "^12.0.12",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
     "@types/styled-components": "^4.4.2",
+    "@types/uuid": "^3.4.7",
+    "axios": "^0.18.1",
+    "build": "^0.1.4",
     "commonmark": "^0.29.0",
     "husky": "^3.1.0",
+    "jszip": "^3.2.2",
+    "jszip-utils": "^0.1.0",
     "lint-staged": "^9.5.0",
+    "monaco-editor": "^0.19.3",
+    "parcel": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.3.1",
     "prettier": "^1.19.1",
+    "react": "^16.13.0",
+    "react-app-polyfill": "^1.0.6",
     "react-content-loader": "^4.2.2",
-    "typesafe-actions": "^4.4.2"
+    "react-dom": "^16.13.0",
+    "styled-components": "^4.4.1",
+    "ts-results": "^2.0.1",
+    "typesafe-actions": "^4.4.2",
+    "typescript": "^3.8.3",
+    "uuid": "^3.4.0"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
@@ -35,14 +58,17 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.0.0",
     "@material-ui/styles": "^4.2.1",
-    "@types/commonmark": "^0.27.4",
     "axios": "^0.18.0",
-    "commonmark": "^0.29.0",
     "react": ">=16.0.0",
-    "react-content-loader": "^4.2.2",
     "react-dom": ">=16.0.0",
     "styled-components": "^4.3.2",
-    "typesafe-actions": "^4.4.2"
+    "@monaco-editor/react": "^3.0.1",
+    "jszip": "^3.2.2",
+    "jszip-utils": "^0.1.0",
+    "monaco-editor": "^0.19.3",
+    "react-app-polyfill": "^1.0.6",
+    "ts-results": "^2.0.1",
+    "uuid": "^3.4.0"
   },
   "husky": {
     "hooks": {
@@ -54,33 +80,5 @@
       "prettier --write",
       "git add"
     ]
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-regular-svg-icons": "^5.12.1",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/react-fontawesome": "^0.1.9",
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/styles": "^4.9.0",
-    "@monaco-editor/react": "^3.0.1",
-    "@types/jszip": "^3.1.7",
-    "@types/uuid": "^3.4.7",
-    "axios": "^0.18.1",
-    "build": "^0.1.4",
-    "jszip": "^3.2.2",
-    "jszip-utils": "^0.1.0",
-    "monaco-editor": "^0.19.3",
-    "parcel": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.3.1",
-    "react": "^16.13.0",
-    "react-app-polyfill": "^1.0.6",
-    "react-dom": "^16.13.0",
-    "react-webworker": "^2.1.0",
-    "styled-components": "^4.4.1",
-    "ts-results": "^2.0.1",
-    "typescript": "^3.8.3",
-    "uuid": "^3.4.0",
-    "zeit": "^1.3.0"
   }
 }
