--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moocfi-python-editor",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -29,7 +29,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/styled-components": "^4.4.2",
     "@types/uuid": "^3.4.7",
-    "axios": "^0.18.1",
+    "axios": ">=0.18.1",
     "build": "^0.1.4",
     "commonmark": "^0.29.0",
     "husky": "^3.1.0",
