--- a/package.json
+++ b/package.json
@@ -28,29 +28,28 @@
     "@material-ui/styles": "^4.9.0",
     "@monaco-editor/react": "^3.0.1",
     "@types/commonmark": "^0.27.4",
-    "@types/node": "^12.0.12",
+    "@types/node": "^14.0.4",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
-    "@types/styled-components": "^4.4.2",
-    "@types/uuid": "^3.4.7",
-    "axios": ">=0.18.1",
+    "@types/styled-components": "^5.1.0",
+    "@types/uuid": "^8.0.0",
+    "axios": "^0.18.1",
     "commonmark": "^0.29.0",
-    "husky": "^3.1.0",
+    "husky": "^4.2.5",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
-    "lint-staged": "^9.5.0",
+    "lint-staged": "^10.2.4",
     "monaco-editor": "^0.20.0",
     "parcel": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.3.1",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.5",
     "react": "^16.13.0",
-    "react-content-loader": "^4.2.2",
     "react-dom": "^16.13.0",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.1.0",
     "ts-results": "^2.0.1",
-    "typesafe-actions": "^4.4.2",
-    "typescript": "^3.8.3",
-    "uuid": "^3.4.0"
+    "typesafe-actions": "^5.1.0",
+    "typescript": "^3.9.3",
+    "uuid": "^8.0.0"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
@@ -61,14 +60,14 @@
     "@material-ui/core": "^4.0.0",
     "@material-ui/styles": "^4.2.1",
     "axios": ">=0.18.0",
-    "react": ">=16.0.0",
-    "react-dom": ">=16.0.0",
-    "styled-components": "^4.3.2",
+    "react": ">=16.10.0",
+    "react-dom": ">=16.10.0",
+    "styled-components": "^5.1.0",
     "@monaco-editor/react": "^3.0.1",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
-    "monaco-editor": "^0.19.3",
-    "uuid": "^3.4.0"
+    "monaco-editor": "^0.20.0",
+    "uuid": "^8.0.0"
   },
   "husky": {
     "hooks": {
