--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "moocfi-python-editor",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf ./dist && npm run encode:worker && tsc",
     "encode:worker": "node bin/generateBase64.js",
     "cypress:open": "cypress open",
-    "now-build": "npm run encode:worker && cd example && parcel build index.html --out-dir ../public && cp ../static/* ../public/",
+    "now-build": "npm run encode:worker && cd example && parcel build index.html --out-dir ../public",
     "prepublishOnly": "npm run build",
     "watch": "tsc --watch"
   },
