Completion and feedback layout, comment out unnecessary logs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "noFallthroughCasesInSwitch": true,
     "outDir": "./dist",
     "target": "es5",
+    "downlevelIteration": true,
     "lib": ["dom", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
