--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": false,
     "target": "es5",
+    "downlevelIteration": true,
     "module": "commonjs",
     "jsx": "react",
     "moduleResolution": "node",
