--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.9.5",
+    "@material-ui/lab": "^4.0.0-alpha.54",
     "@material-ui/styles": "^4.9.0",
     "@monaco-editor/react": "^3.0.1",
     "@types/commonmark": "^0.27.4",
@@ -59,6 +60,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.0.0",
     "@material-ui/styles": "^4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.54",
     "axios": ">=0.18.0",
     "react": ">=16.10.0",
     "react-dom": ">=16.10.0",
