--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^0.18.1",
     "commonmark": "^0.29.0",
     "husky": "^4.2.5",
+    "i18next": "^19.3.0",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
     "lint-staged": "^10.2.4",
@@ -45,6 +46,7 @@
     "prettier": "^2.0.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-i18next": "^11.3.0",
     "styled-components": "^5.1.0",
     "ts-results": "^2.0.1",
     "typesafe-actions": "^5.1.0",
@@ -60,8 +62,10 @@
     "@material-ui/core": "^4.0.0",
     "@material-ui/styles": "^4.2.1",
     "axios": ">=0.18.0",
+    "i18next": ">=19.3.0",
     "react": ">=16.10.0",
     "react-dom": ">=16.10.0",
+    "react-i18next": ">=11.3.0",
     "styled-components": "^5.1.0",
     "@monaco-editor/react": "^3.0.1",
     "jszip": "^3.2.2",
