--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "moocfi-python-editor",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "build": "rm -rf ./dist && npm run encode:worker && tsc",
     "encode:worker": "node bin/generateBase64.js",
@@ -25,7 +25,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.9.5",
-    "@material-ui/lab": "^4.0.0-alpha.54",
     "@material-ui/styles": "^4.9.0",
     "@monaco-editor/react": "^3.0.1",
     "@types/commonmark": "^0.27.4",
@@ -62,7 +61,6 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.0.0",
     "@material-ui/styles": "^4.2.1",
-    "@material-ui/lab": "^4.0.0-alpha.54",
     "axios": ">=0.18.0",
     "i18next": ">=19.3.0",
     "react": ">=16.10.0",
