--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -10,6 +10,8 @@ jobs:
         uses: cypress-io/github-action@v1
         with:
           runTests: false
+      - name: Encode workers
+        run: npm run encode:worker
       - name: Start server
         working-directory: ./example
         run: npm start 
