--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -14,7 +14,7 @@ jobs:
         run: npm run encode:worker
       - name: Start server
         working-directory: ./example
-        run: npm start 
+        run: npm start & wait-on http://localhost:1234
       - name: Cypress tests
         uses: cypress-io/github-action@v1
         with:
