--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           install: false
           working-directory: example
-          run: npm start
+          start: npm start
           wait-on: http://localhost:1234
