--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -1,21 +1,16 @@
-name: Cypress E2E tests
+name: Cypress End-2-End tests
 on: [push]
 jobs:
-  end2end_tests:
+  run_tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v1
-      - name: Install deps
-        uses: cypress-io/github-action@v1
-        with:
-          runTests: false
       - name: Encode workers
         run: npm run encode:worker
       - name: Cypress tests
         uses: cypress-io/github-action@v1
         with:
-          install: false
           working-directory: example
           start: npm start
           wait-on: http://localhost:1234
