--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moocfi-python-editor",
-  "version": "0.7.28",
+  "version": "0.8.0",
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
@@ -9,6 +9,8 @@
     "cypress:open": "cypress open",
     "now-build": "npm run encode:worker && cd example && parcel build index.html --out-dir ../public",
     "prepublishOnly": "npm run build",
+    "prettier-check": "prettier --check **/*.{js,json,md,ts,tsx}",
+    "prettier": "prettier --write **/*.{js,json,md,ts,tsx}",
     "watch": "tsc --watch"
   },
   "keywords": [],
@@ -81,8 +83,7 @@
   },
   "lint-staged": {
     "*.{js,css,json,md,ts,tsx}": [
-      "prettier --write",
-      "git add"
+      "prettier --check"
     ]
   }
 }
