--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "cypress:open": "cypress open",
     "now-build": "npm run encode:worker && cd example && parcel build index.html --out-dir ../public",
     "prepublishOnly": "npm run build",
-    "prettier-check": "prettier --check **/*.{js,json,md,ts,tsx}",
-    "prettier": "prettier --write **/*.{js,json,md,ts,tsx}",
+    "prettier-check": "prettier --check './**/*.{js,json,md,ts,tsx}'",
+    "prettier": "prettier --write './**/*.{js,json,md,ts,tsx}'",
     "watch": "tsc --watch"
   },
   "keywords": [],
