Encode editor code as base64

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "commonmark": "^0.29.0",
     "husky": "^4.3.0",
     "i18next": "^19.7.0",
+    "js-base64": "^3.5.2",
     "jszip": "^3.5.0",
     "jszip-utils": "^0.1.0",
     "lint-staged": "^10.3.0",
@@ -68,6 +69,7 @@
     "@monaco-editor/react": "^3.3.1",
     "axios": ">=0.18.0",
     "i18next": ">=19.3.0",
+    "js-base64": "^3.5.2",
     "react": ">=16.10.0",
     "react-dom": ">=16.10.0",
     "react-i18next": ">=11.3.0",
