Add license files and notice

--- a/example/package.json
+++ b/example/package.json
@@ -2,7 +2,7 @@
   "name": "example",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "license": "Apache-2.0 OR MIT",
   "scripts": {
     "start": "rm -rf ./dist && rm -rf ./.cache && rm -rf ../dist && parcel index.html",
     "build": "parcel build index.html",
