--- a/example/package.json
+++ b/example/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "parcel": "^1.12.4",
     "react": "^16.13.0",
-    "react-app-polyfill": "^1.0.6",
-    "react-webworker": "^2.1.0"
+    "react-app-polyfill": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "^16.9.51",
