--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lint-staged": "^10.4.0",
     "luxon": "^1.25.0",
     "monaco-editor": "^0.21.2",
+    "parcel": "^1.12.4",
     "prettier": "^2.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
