Modify cypress e2e workflow build step

--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -12,17 +12,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v1
-      - name: Install deps
-        uses: cypress-io/github-action@v2.2.6
-        with:
-          runTests: false
+      - name: Install root dependencies
+        uses: bahmutov/npm-install@v1.4.3
       - name: Encode workers
         run: npm run encode:worker
       - name: Cypress tests
         if: success()
         uses: cypress-io/github-action@v2.2.6
         with:
-          install: false
           working-directory: example
           start: npm start
           wait-on: http://localhost:1234
