--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rm -rf ./dist && npm run encode:worker && tsc",
     "encode:worker": "node bin/generateBase64.js",
     "cypress:open": "cypress open",
-    "now-build": "npm run encode:worker && cd example && parcel build index.html --out-dir ../public",
+    "now-build": "npm run encode:worker && cd example && npm ci && npm run now-build",
     "prepublishOnly": "npm run build",
     "prettier-check": "prettier --check './**/*.{js,json,md,ts,tsx}'",
     "prettier": "prettier --write './**/*.{js,json,md,ts,tsx}'",
@@ -44,7 +44,6 @@
     "lint-staged": "^10.4.0",
     "luxon": "^1.25.0",
     "monaco-editor": "^0.21.2",
-    "parcel": "^1.12.4",
     "prettier": "^2.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
