--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -13,13 +13,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v1
       - name: Install root dependencies
-        uses: bahmutov/npm-install@v1.4.3
+        uses: bahmutov/npm-install@v1.4.5
       - name: Encode workers
         run: npm run encode:worker
       - name: Cypress tests
         if: success()
-        uses: cypress-io/github-action@v2.2.6
+        uses: cypress-io/github-action@v2.3.10
         with:
           working-directory: example
           start: npm start
           wait-on: http://localhost:1234
+          record: false
