--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moocfi-python-editor",
-  "version": "0.9.0-pre.13",
+  "version": "0.9.0",
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
