--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rm -rf ./dist && npm run encode:worker && tsc",
     "encode:worker": "node bin/generateBase64.js",
     "cypress:open": "cypress open",
-    "now-build": "npm run encode:worker && cd example && parcel build index.html --out-dir ../public",
+    "now-build": "npm run encode:worker && cd example && npm ci && npm run now-build",
     "prepublishOnly": "npm run build",
     "prettier-check": "prettier --check './**/*.{js,json,md,ts,tsx}'",
     "prettier": "prettier --write './**/*.{js,json,md,ts,tsx}'",
