--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
+    "build": "rm -rf ./dist && npm run encode:worker && tsc",
     "build": "rm -rf ./dist && tsc",
+    "encode:worker": "node bin/generateBase64.js",
     "cypress:open": "cypress open",
-    "now-build": "cd example && npm ci && npm run now-build",
+    "now-build": "npm run encode:worker && cd example && npm ci && npm run now-build",
     "prepublishOnly": "npm run build",
     "prettier-check": "prettier --check './**/*.{js,json,md,ts,tsx}'",
     "prettier": "prettier --write './**/*.{js,json,md,ts,tsx}'",
