--- a/package.json
+++ b/package.json
@@ -21,59 +21,59 @@
     "url": "https://github.com/rage/python-editor.git"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/styles": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/styles": "^4.11.3",
     "@monaco-editor/react": "^3.8.3",
-    "@types/luxon": "^1.25.0",
-    "@types/node": "^14.14.20",
-    "@types/react": "^17.0.0",
+    "@types/luxon": "^1.25.1",
+    "@types/node": "^14.14.26",
+    "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.0",
-    "husky": "^4.3.7",
-    "i18next": "^19.8.4",
+    "husky": "^4.3.8",
+    "i18next": "^19.8.7",
     "js-base64": "^3.6.0",
-    "jszip": "^3.5.0",
+    "jszip": "^3.6.0",
     "jszip-utils": "^0.1.0",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^10.5.4",
     "luxon": "^1.25.0",
-    "monaco-editor": "^0.21.2",
+    "monaco-editor": "^0.21.3",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-i18next": "^11.8.5",
+    "react-i18next": "^11.8.6",
     "styled-components": "^5.2.1",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.1.5",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/styles": "^4.10.0",
-    "@monaco-editor/react": "^3.6.3",
-    "axios": ">=0.18.0",
-    "i18next": ">=19.3.0",
-    "js-base64": "^3.5.2",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/styles": "^4.11.3",
+    "@monaco-editor/react": "^3.8.3",
+    "axios": "^0.21.0",
+    "i18next": ">=19.8.7",
+    "js-base64": "^3.6.0",
+    "luxon": "^1.25.0",
+    "jszip": "^3.5.0",
+    "jszip-utils": "^0.1.0",
+    "monaco-editor": "^0.21.3",
     "react": ">=16.10.0",
     "react-dom": ">=16.10.0",
     "react-i18next": ">=11.3.0",
-    "luxon": "^1.25.0",
-    "styled-components": "^5.2.0",
-    "jszip": "^3.5.0",
-    "jszip-utils": "^0.1.0",
-    "monaco-editor": "^0.21.2",
-    "uuid": "^8.3.1"
+    "styled-components": "^5.2.1",
+    "uuid": "^8.3.2"
   },
   "husky": {
     "hooks": {
