Intercept pyodide downloading in tests, less redundancy

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "rm -rf ./dist && npm run encode:worker && tsc",
     "encode:worker": "node bin/generateBase64.js",
     "cypress:open": "cypress open",
-    "now-build": "npm run encode:worker && cd example && npm ci && npm run now-build",
+    "download-pyodide": "node bin/downloadPyodideFiles.js",
+    "now-build": "npm run encode:worker && npm run download-pyodide && cd example && npm ci && npm run now-build",
     "prepublishOnly": "npm run build",
     "prettier-check": "prettier --check './**/*.{js,json,md,ts,tsx}'",
     "prettier": "prettier --write './**/*.{js,json,md,ts,tsx}'",
@@ -44,6 +45,7 @@
     "lint-staged": "^10.5.4",
     "luxon": "^1.25.0",
     "monaco-editor": "^0.22.3",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
