--- a/.github/workflows/cypress-e2e.yml
+++ b/.github/workflows/cypress-e2e.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v1
       - name: Install root dependencies
         uses: bahmutov/npm-install@v1.4.5
+      - name: Download cdn fixtures
+        run: npm run download-pyodide
       - name: Encode workers	
         run: npm run encode:worker
       - name: Cypress tests
