--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.8",
     "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "axios": "^0.21.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.3",
     "i18next": "^19.9.2",
     "js-base64": "^3.6.0",
