--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.10.0",
+    "react-query": "^3.39.2",
     "styled-components": "^5.3.0",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.3.2",
@@ -81,12 +82,13 @@
     "axios": "^0.21.0",
     "i18next": ">=20.2.0",
     "js-base64": "^3.6.0",
-    "luxon": "^1.26.0",
     "jszip": "^3.6.0",
     "jszip-utils": "^0.1.0",
+    "luxon": "^1.26.0",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0",
     "react-i18next": ">=11.8.0",
+    "react-query": "=>3.39.0",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2"
   },
