--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0",
     "react-i18next": ">=11.8.0",
-    "react-query": "=>3.39.0",
+    "react-query": ">=3.39.0",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2"
   },
